final pt1
