# app.js
@@ -4,10 +4,37 @@ const MongoClient = require('mongodb').MongoClient;
 const mongodb = require('./db/connect');
 const sample1Routes = require('./routes/sample1');
 const sample2Routes = require('./routes/sample2');
+const axios = require('axios');
+const session = require('express-session');
 
 const port = process.env.PORT || 3001;
 const app = express();
 
+app.use(session({
+  secret:process.env.GITHUB_CLIENT_SECRET, resave:false, saveUninitialized:true
+}))
+app.get('/login', (req, res) => {
+  res.redirect(
+    `https://github.com/login/oauth/authorize?client_id=${process.env.GITHUB_CLIENT_ID}&prompt=consent`,
+  );
+});
+
+app.get('/callback', (req, res) => {
+  const {code} = req.query
+  const body = {
+    client_id: process.env.GITHUB_CLIENT_ID,
+    client_secret: process.env.GITHUB_CLIENT_SECRET,
+    code,
+  };
+  const opts = { headers: { accept: 'application/json' } };
+  axios
+    .post('https://github.com/login/oauth/access_token', body, opts)
+    .then((_res) => {
+      req.session.token = _res.data.access_token
+      res.redirect('/api-docs')
+    })
+    .catch((err) => res.status(500).json({ err: err.message }));
+});
 app
   .use(bodyParser.json())
   .use((req, res, next) => {
@@ -16,6 +43,12 @@ app
   })
   .use('/', require('./routes'));
 
+app.get('/logout', (req, res) => {
+  req.session.token = null
+    res.redirect(
+      `/api-docs`,
+    );
+  });
 mongodb.initDb((err, mongodb) => {
   if (err) {
     console.log(err);
